<resources>
    <string name="app_name">Allert</string>
    <string name="action_settings">Settings</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="signUp">Yeni Hesap Oluştur</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="allergens">Alerjenler (Virgül ile ayırınız.)</string>
    <string name="hello">Merhaba!</string>
    <string name="signUpnew">Üye ol</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="icindekiler">Etkin Madde</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="warning">Bu ürünün içinde alerjinizin olduğunu belirttiğiniz etken madde bulunmaktadır.</string>
    <string name="safe">Bu üründe alerjinizin olduğunu belittiğiniz bir madde bulunduğu belirtilmemiştir.</string>
    <string name="auth_failed">Giriş Yapılamadı</string>
    <string name="logOut">Çıkış Yap</string>
    <string name="barcode">Barkod</string>
    <string name="profile">Profilim</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="allergenswithoutcomma">Alerjenler</string>
    <string name="addAllergens">Alerjen ekle</string>
    <string name="addAllergenswithcomma">Alerjenlerinizi giriniz.(Lütfen virgülle ayırınız.)</string>
    <string name="verifyEmail">Lütfen e-mail adresinizi doğrulayın.</string>
    <string name="forgotPassword">Şifremi unuttum</string>
    <string name="add">Ekle</string>
    <string name="ok">Tamam</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="loginSuccess">Giriş Yapıldı</string>
    <string name="newProperty">Allert\'in barkod okuma özelliği yakında eklenecektir.</string>
    <string name="cancel">İptal</string>
    <string name="longClick">(Alerjenlerin üstüne basılı tutarak değişiklik yapabilirsiniz.)</string>
    <string name="loading">Liste Yükleniyor...</string>
    <string name="search">Ara</string>
    <string name="blacklist">Kara Listem</string>
    <string name="favoriler">Favorilerim</string>
    <string name="fail">Bir sorun oluştu.</string>
    <string name="removeObject">Listeden bir ürünü kaldırmak için basılı tutunuz.</string>
    <string name="deleteItemOnBlackList">Bu ürünü listeden çıkarmak istediğinize emin misiniz?</string>
    <string name="contact">Herhangi bir konu ile ilgili iletişime geçmek için allert.app@gmail.com\'a mail atabilirsiniz.</string>
    <string name="info">ÖNEMLİ UYARI:&#xA;Hiçbir ilacı doktor veya eczacıya danışmadan kullanmayınız. Allert\'ten edinilen bilgiler doktor veya eczacıya danışma yerine geçmez. Gerçek bir tanı ve tedavi için doktor ile görüşülmelidir. Bilgilerin yanlış anlaşılmasından ve buna bağlı olarak doğabilecek sorunlardan uygulamamız yasal sorumluluk altında değildir. Bu uygulamada verilen bilgilerin kullanılmasının sorumluluğu tümüyle kullanıcıya aittir. </string>
</resources>
