<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aysusayin.com.allert.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="14dp">

        <aysusayin.com.allert.TitleTextView
            android:id="@+id/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="casual" />

        <aysusayin.com.allert.TitleTextView
            android:id="@+id/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="E-Mail"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="casual" />

        <aysusayin.com.allert.TitleTextView
            android:id="@+id/TextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/allergenswithoutcomma"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/allergensTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="casual" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/longClick"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        android:layout_above="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="4dp"
        android:gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:text="@string/info"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/contact"
        android:textSize="12sp" />

    <aysusayin.com.allert.MyButton
        android:id="@+id/blackListButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/imageView4"
        android:background="@android:color/transparent"
        android:text="@string/blacklist"
        android:textAllCaps="false" />

    <aysusayin.com.allert.MyButton
        android:id="@+id/favoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/blackListButton"
        android:layout_below="@+id/blackListButton"
        android:background="@android:color/transparent"
        android:paddingTop="5dp"
        android:text="@string/favoriler"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        app:srcCompat="?android:attr/alertDialogIcon" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blackListButton"
        android:layout_toStartOf="@+id/favoritesButton"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <aysusayin.com.allert.MyButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6"
        android:background="@android:color/transparent"
        android:paddingLeft="8dp"
        android:paddingTop="5dp"
        android:text="Güvenilir Kişiler"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="30dp"
        android:layout_height="25dp"
        app:srcCompat="?android:attr/fingerprintAuthDrawable"
        android:layout_alignBottom="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

</RelativeLayout>
