<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aysusayin.com.allert.SignUpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/renkliapples" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/UsernameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/textInputLayout"
        android:layout_below="@+id/textInputLayout2"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textInputLayout"
            android:layout_marginTop="102dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/textInputLayout2"
        android:layout_below="@+id/nameInput"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/mailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/textInputLayout3"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/allergensEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/allergens" />
    </android.support.design.widget.TextInputLayout>

    <aysusayin.com.allert.LoginTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="Allert"
        android:textColor="@android:color/white"
        android:textSize="90sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/hello"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:textSize="30dp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/transparentWhite"
        android:text="@string/signUpnew"
        android:textColor="@android:color/holo_green_dark" />

</RelativeLayout>
